--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,11 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/assets": ["./assets/"],
+      "@/components": ["./app/components/"]
+    },
     "plugins": [
       {
         "name": "next"
